--- a/pages/projects.html
+++ b/pages/projects.html
@@ -110,8 +110,10 @@
 
         </section>
 
-        <section class="pic">
+        <section class="pole">
+            <div class="pic">
             <img id="pic2" src="../img/pole.jpg" alt="">
+            </div>
             <p>
                 "Быховский край - это удивительный уголок, который гармонично сочетает доблестное прошлое и современное
                 настоящее. Мы храним и чтим память предков, бережно восстанавливаем историю, наполняя её рассказами,
@@ -345,7 +347,6 @@
                 } else {
                     pw = w - 180
                 }
-                if (w<600) {pw = w - 230 }
 
                 let ph = h / 2 - 100
 
