fix business incubator page

--- a/pages/incubator.html
+++ b/pages/incubator.html
@@ -77,9 +77,9 @@
         <section class="sec1">
             <h2>Что вас интересует?</h2>
             <div id="tgs">
-                <span><a href="#i1">Коворкинг</a></span>
-                <span><a href="#i2">Консалтинг</a></span>
                 <span><a href="#i3">Стартап лаборатория</a></span>
+                <span><a href="#i2">Консультации</a></span>
+                <span><a href="#i1">Коворкинг</a></span>
                 <span><a href="education.html">Обучение</a></span>
             </div>
         </section>
@@ -89,7 +89,7 @@
                 <a name="i3">
                     <h1>Стартап-лаборатория</h1>
                 </a>
-                <div id="addr">
+                <div class="address">
                     <img src="../img/addr.svg" alt="">
                     <span>г.Быхов, ул. Советская., 2А</span>
                 </div>
@@ -121,7 +121,7 @@
                 <a name="i2">
                     <h1>Консультации</h1>
                 </a>
-                <div id="addr1">
+                <div class="address">
                     <img src="../img/addr.svg" alt="">
                     <span>г.Быхов, ул. Советская., 2А</span>
                 </div>
@@ -176,7 +176,7 @@
                 <a name="i1">
                     <h1>Коворкинг</h1>
                 </a>
-                <div id="addr1">
+                <div class="address">
                     <img src="../img/addr.svg" alt="">
                     <span>г.Быхов, ул. Советская., 2А</span>
                 </div>
@@ -385,7 +385,7 @@
                 if (w < 1400) {
                     pw = w - 120
                 } else {
-                    pw = w - 180
+                    pw = w - 140
                 }
 
                 let ph = h / 2 - 100
