fix education page

--- a/pages/education.html
+++ b/pages/education.html
@@ -72,7 +72,7 @@
             <h2>Наши замечательные преподаватели</h2>
         </section>
 
-        <section id="car1" class="sec1 card"> </section>
+        <section id="car1" class="sec1 card "> </section>
 
         <section class="sec1">
             <a name="e1">
@@ -80,9 +80,9 @@
             </a>
         </section>
 
-        <section id="car2" class="sec1 card"> </section>
+        <section id="car2" class="sec1 card courses-row"> </section>
 
-        <section id="car2_1" class="sec1 card"> </section>
+        <section id="car2_1" class="sec1 card courses-row"> </section>
 
 
         <section class="sec1">
@@ -91,9 +91,9 @@
             </a>
         </section>
 
-        <section id="car4" class="sec1 card"> </section>
+        <section id="car4" class="sec1 card courses-row"> </section>
 
-        <section id="car5" class="sec1 card"> </section>
+        <section id="car5" class="sec1 card courses-row"> </section>
 
 
         <section class="sec1">
@@ -102,7 +102,7 @@
             </a>
         </section>
 
-        <section id="car6" class="sec1 card"> </section>
+        <section id="car6" class="sec1 card courses-row"> </section>
 
 
         <section class="sec1">
@@ -111,11 +111,11 @@
             </a>
         </section>
 
-        <section id="car8" class="sec1 card"> </section>
+        <section id="car8" class="sec1 card courses-row"> </section>
 
 
 
-        <section class="sec3">
+        <section class="sec3 feedback">
             <div id="f1">
                 <h2>Напишите нам и мы свяжемся с вами</h2>
                 <form action="#">
