add links to social media, replace twitter with inst

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
     <p>Сайт разработан в рамках реализации инициативы «Быхов-инновационный», в рамках проекта «Поддержка экономического развития на местном уровне в Республике Беларусь», который финансируется Европейским союзом (ЕС) и реализуется Программой развития ООН (ПРООН) в партнерстве с Министерством экономики Республики Беларусь. Изложенная информация не отражает официальную позицию Европейского союза, ПРООН и Министерства экономики Республики Беларусь.
     </p>
 <div id="social">
-    <a href="#"><img src="img/s1.svg" alt=""></a>
-    <a href="#"><img src="img/s2.svg" alt=""></a>
-    <a href="#"><img src="img/s4.svg" alt=""></a>
+    <a href="https://vk.com/inbykhau"><img src="../img/s1.svg" alt=""></a>
+    <a href="https://www.facebook.com/groups/inbykhau/"><img src="../img/s2.svg" alt=""></a>
+    <a href="https://www.instagram.com/inby_by/"><img src="../img/s3.svg" alt=""></a>
+    <a href="#"><img src="../img/s4.svg" alt=""></a>
 </div>
 </section>
 
