--- a/pages/news_business_incubator.html
+++ b/pages/news_business_incubator.html
@@ -33,9 +33,9 @@
     <div id="bMenu">
     </div>
     <div class="social msocial">
-        <a href="#"><img src="../img/s1.svg" alt=""></a>
-        <a href="#"><img src="../img/s2.svg" alt=""></a>
-        <a href="#"><img src="../img/s3.svg" alt=""></a>
+        <a href="https://vk.com/inbykhau"><img src="../img/s1.svg" alt=""></a>
+        <a href="https://www.facebook.com/groups/inbykhau/"><img src="../img/s2.svg" alt=""></a>
+        <a href="https://www.instagram.com/inby_by/"><img src="../img/s3.svg" alt=""></a>
         <a href="#"><img src="../img/s4.svg" alt=""></a>
     </div>
 </div>
@@ -45,9 +45,9 @@
     <div id="logo_pages"><a href="../index.html"><span id="mc">Іn</span><span>By</span></a></div>
     <div id="side_menu"></div>
     <div id="social">
-        <a href="#"><img src="../img/s1.svg" alt=""></a>
-        <a href="#"><img src="../img/s2.svg" alt=""></a>
-        <a href="#"><img src="../img/s3.svg" alt=""></a>
+        <a href="https://vk.com/inbykhau"><img src="../img/s1.svg" alt=""></a>
+        <a href="https://www.facebook.com/groups/inbykhau/"><img src="../img/s2.svg" alt=""></a>
+        <a href="https://www.instagram.com/inby_by/"><img src="../img/s3.svg" alt=""></a>
         <a href="#"><img src="../img/s4.svg" alt=""></a>
     </div>
 </div>
@@ -87,9 +87,9 @@
 </main>
 <footer id="foot0">
     <div class="social mobsocial">
-        <a href="#"><img src="../img/s1.svg" alt=""></a>
-        <a href="#"><img src="../img/s2.svg" alt=""></a>
-        <a href="#"><img src="../img/s3.svg" alt=""></a>
+        <a href="https://vk.com/inbykhau"><img src="../img/s1.svg" alt=""></a>
+        <a href="https://www.facebook.com/groups/inbykhau/"><img src="../img/s2.svg" alt=""></a>
+        <a href="https://www.instagram.com/inby_by/"><img src="../img/s3.svg" alt=""></a>
         <a href="#"><img src="../img/s4.svg" alt=""></a>
     </div>
     <div id="foot1">
