replace UNDP logos

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/pages.css">
     <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/common.css">
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -138,9 +139,7 @@
             с Министерством экономики Республики Беларусь
         </div>
         <div id="logo">
-            <img src="../img/logo1.svg" alt="">
-            <img src="../img/logo2.svg" alt="">
-            <img src="../img/logo3.svg" alt="">
+            <img src="../img/logo_all.png" alt="">
         </div>
     </footer>
     <!-- 
