--- a/pages/web_design.html
+++ b/pages/web_design.html
@@ -216,9 +216,7 @@
             с Министерством экономики Республики Беларусь
         </div>
         <div id="logo">
-            <img src="../img/logo1.svg" alt="">
-            <img src="../img/logo2.svg" alt="">
-            <img src="../img/logo3.svg" alt="">
+            <img src="../img/logo_all.png" alt="">
         </div>
     </footer>
 
