--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 <header style="margin-bottom: 20px;">
 
     <div id="logo_ipad">
-        <img id="l1" src="img/logo1.svg" alt="">
-        <img id="l2" src="img/logo2.svg" alt="">
-        <img id="l3" src="img/logo3.svg" alt="">
+        <img src="img/logo_all.png" alt="">
     </div>
 
     <div id="title">
@@ -44,9 +42,7 @@
     </div>
 
 <div id="logo">
-<img id="l1" src="img/logo1.svg" alt="">
-<img id="l2" src="img/logo2.svg" alt="">
-<img id="l3" src="img/logo3.svg" alt="">
+    <img src="img/logo_all.png" alt="">
     </div>
 </header>
 
@@ -83,9 +79,7 @@
     </div>
     
     <div id="logo_android">
-        <img id="l1" src="img/logo1.svg" alt="">
-        <img id="l2" src="img/logo2.svg" alt="">
-        <img id="l3" src="img/logo3.svg" alt="">
+        <img src="img/logo_all.png" alt="">
     </div>
 
 <div class="burg1">
