change 'other courses' dates and images

--- a/pages/it_accountant.html
+++ b/pages/it_accountant.html
@@ -81,7 +81,7 @@
 
                 <div class="cont1">
                     <div><img src="../img/page_web_app/start.svg" alt="">
-                        <p> С 1 апреля </p>
+                        <p> По запросу </p>
                     </div>
                     <div><img src="../img/page_web_app/line13.svg" alt=""></div>
                     <div><img src="../img/page_web_app/time.svg" alt="">
