upd incubator page content

--- a/app/pages/incubator.html
+++ b/app/pages/incubator.html
@@ -140,13 +140,12 @@
                             <h3> Консультация юристов</h3>
                             <span>В рамках бизнес-инкубатора наши адвокаты оказывают бесплатную юридическую помощь по
                                 вопросам открытия и сопровождения бизнеса, проконсультируют по выбору формы
-                                собственности и особенностям дальнейшей деятельности..</span>
+                                собственности и особенностям дальнейшей деятельности.</span>
                         </div>
                         <div>
                             <h3>Консультация бухгалтеров</h3>
                             <span>В рамках бизнес-инкубатора наши бухгалтера проведут бесплатные консультации по
-                                вопросам бухгалтерского учета, посоветуют с выбором формы собственности и нюансами в
-                                дальнейшей деятельности.</span>
+                                вопросам бухгалтерского учета, помогут разобраться в нюансах текущей деятельности.</span>
                         </div>
                     </div>
                 </div>
@@ -154,8 +153,7 @@
                     <div class="c1"><img class="card_img" src="../img/inc4.png" alt="">
                         <h3 class="card_title">У вас есть<br> проект?<br> Мы слушаем!</h3>
                         <div class="c2">
-                            <span>Если у вас есть интересный проект, который мы можем реализовать вместе - мы с
-                                удовольствием с ним <br>ознакомимся!</span>
+                            <span>Если у вас есть интересный проект, который мы можем помочь реализовать - напишите нам!</span>
                         </div>
                         <div class="card_arrow"><img class="arr1" src="../img/arrow10.svg" alt=""></div>
                     </div>
