--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" type="image/png" />
    
 </head>
 <body id="bodyContainer" onload="startres()" onresize="res()">
