--- a/app/pages/thanks_for_feedback.html
+++ b/app/pages/thanks_for_feedback.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Наши события</title>
+  <title>Спасибо за ваше обращение</title>
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/fonts.css">
   <link rel="stylesheet" href="../css/pages.css">
-  <link rel="stylesheet" href="../css/events.css">
-  <link rel="stylesheet" href="../css/forrms.css">
-
+  <link rel="stylesheet" href="../css/about.css">
+  <link rel="stylesheet" href="../css/common.css">
 </head>
 
 <body id="bodyContainer" onload="startres()" onresize="res()">
@@ -58,102 +57,16 @@
   </aside>
 
   <main id="mainCont">
-    <section class="title">
+    <section class="sec1">
       <div>
-        <h1>Наши события</h1>
-        <img id="vline1" src="../img/line1.svg" alt="">
+        <h1>Спасибо!</h1>
       </div>
       <div>
-    </section>
-
-    <section class="header">
-      <div class="header__container">
-        <div class="header__content">
-          <div class="header__date">
-            1 апреля
-          </div>
-          <div class="header__cont">
-            <h3>Стартует 1 набор курса "Удаленная работа или как зарабатывать, не выходя из дома".</h3>
-            <p>
-              Развитие IT-технологий определяет профессии будущего, поэтому даже в кризис специалисты на
-              удаленной работе не сидят без дела. И сейчас самое время научиться использовать современные
-              технологии и начать на этом зарабатывать.
-            </p>
-          </div>
-        </div>
-        <div class="header__button">
-          <button class="button">Хочу прийти!</button>
-        </div>
-
-
+        <h2>Мы обязательно свяжемся с вами.</h2>
       </div>
-
-    </section>
-
-    <section class="events">
-      <div class="events__flex">
-        <div class="events__calendar">
-          <img src="../img/page_events/calendar_july.svg" alt="">
-        </div>
-        <div class="events__address">
-          <img src="../img/page_events/radius_line.svg" alt="">
-          <div class="events__content">
-            <img src="../img/page_events/address.svg" alt="">
-            <div class="events__addr">
-              <p>г.Быхов,</p>
-              <p>ул. Советская., 2А</p>
-            </div>
-            <h2>Самые интересные события Быхова</h2>
-            <p>Финансирование осуществляется за счет программ ПРОООН</p>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-
-    <span class="switcher">
-      <input type="checkbox" id="switcher" onchange="toggleEvents()">
-      <label for="switcher"></label>
-    </span>
-    <section id="events">
-      <section id="future_events">Следите за обновлениями</section>
-      <section id="past_events">
-        <section id="car2" class="sec1 card"> </section>
-        <section id="car4" class="sec1 card"> </section>
-      </section>
-
-    </section>
-
-
-    <section class="much_news">
-      <a href="#">
-        <div class="much_news__title">
-          <h2>Больше новостей! Еще больше!</h2>
-        </div>
-        <div class="much_news__row">&darr;</div>
-      </a>
-    </section>
-
-    <section class="sec3">
-      <div id="f1">
-        <h2>Напишите нам и мы свяжемся с вами</h2>
-        <form action="../contact.php" method="post">
-          <input type="text" name="fullname" placeholder="Ваше имя" required>
-          <input type="email" name="email" placeholder="Ваш e-mail" required>
-          <textarea name="message" placeholder="Текст комментария"></textarea>
-          <input type="submit" value="Отправить">
-        </form>
-      </div>
-      <div id="f2">
-        <img src="../img/house.svg" alt="">
-        <p>+375 29 758 67 33</p>
-        <p>innovativebykhov@gmail.com</p>
-        <p>г.Быхов, ул. Советская., 2А</p>
-      </div>
-
     </section>
   </main>
+
   <footer id="foot0">
     <div class="social mobsocial">
       <a href="https://vk.com/inbykhau"><img src="../img/s1.svg" alt=""></a>
@@ -175,22 +88,30 @@
       <img src="../img/logo_all.png" alt="">
     </div>
   </footer>
-
+  <!-- 
+    <div class="burg1">
+    <div>
+        <img src="../img/close.svg" alt="">
+    </div>
+    <div id="bMenu">
+    </div>
+    <div class="social msocial">
+        <a href="https://vk.com/inbykhau"><img src="../img/s1.svg" alt=""></a>
+        <a href="https://www.facebook.com/groups/inbykhau/"><img src="../img/s2.svg" alt=""></a>
+        <a href="https://www.instagram.com/inby_by/"><img src="../img/s3.svg" alt=""></a>
+        <a href="#"><img src="../img/s4.svg" alt=""></a>
+    </div>
+</div> -->
 
   <div id="upward">
     <div id="arr"><a href="#top"><img src="../img/up_arrow.svg" alt=""></a></div>
   </div>
 
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="../libs/side_menu.js"></script>
-  <script src="../libs/events.js"></script>
-
 
   <script>
-    function toggleEvents() {
-      $('#events').toggleClass('show-past')
-    }
-
     function startres() {
       res();
       setTimeout('document.body.style.opacity="1"', 100)
@@ -206,7 +127,7 @@
         let hi1, hi = h / 6 - 85;
 
         if (hi < 55) {
-          hi1 = 55
+          hi1 = 50
         } else if (h > 1400) {
           hi1 = 263
         } else {
@@ -222,8 +143,6 @@
         foot0.style.marginLeft = '60px';
         foot1.style.width = '220px';
         foot2.style.marginLeft = '0';
-        f1.style.width = '54%';
-        f2.style.width = '23%';
 
       } else {
         side.style.width = '375px';
@@ -231,10 +150,9 @@
         foot0.style.marginLeft = '160px';
         foot1.style.width = '146px';
         foot2.style.marginLeft = '176px';
-        f1.style.width = '64%';
-        f2.style.width = '18%';
 
       }
+
       if (w < 770) {
         foot0.style.marginLeft = '15px';
       }
@@ -242,10 +160,8 @@
       if (w < 600) {
         foot0.style.marginLeft = '0px';
         foot2.style.marginLeft = '15px';
-        f1.style.width = '276px';
-        f2.style.width = '219px';
-      }
 
+      }
 
       // console.log(`w: ${w}, h: ${h}`)    
 
@@ -277,22 +193,6 @@
     }
   </script>
 
-
-  <div id="mydiv0">
-    <div id="myform0" class="forrms">
-      <img onclick="mydiv0.style.display = 'none'" src="../img/esc.svg" alt="exit">
-      <h2>Напишите нам и мы свяжемся с вами</h2>
-      <form action="../contact.php" method="post">
-        <input type="name" name="fullname" placeholder="Ваше имя" required>
-        <input type="email" name="email" placeholder="Ваш e-mail" required>
-        <input type="tel" name="tel" placeholder="Ваш номер телефона" required>
-        <p>+375 xx xxx xx xx</p>
-        <textarea name="message" placeholder="Текст комментария" required></textarea>
-        <input type="submit" value="Отправить">
-      </form>
-    </div>
-
-  </div>
 </body>
 
 </html>
