Add forms redirect

--- a/app/pages/education.html
+++ b/app/pages/education.html
@@ -311,7 +311,7 @@
   <script onload="addSlider()" type="text/javascript"
     src="//cdn.jsdelivr.net/npm/slick-carousel@1.9.0/slick/slick.min.js"></script>
 
-
+  <script src="../libs/form.js"></script>
 </body>
 
 </html>
